appId: com.chiienton.belote
---
- launchApp
- tapOn:
    id: bouton-regles
- assertVisible: Le jeu
- assertVisible: Distribution
