appId: com.chiienton.belote
---
- launchApp
- tapOn:
    id: bouton-jouer
- assertVisible:
    id: ecran-partie
- assertVisible:
    id: panneau-encheres
    timeout: 15000
- tapOn:
    id: enchere-prendre
- assertVisible:
    id: main-joueur
    timeout: 10000
